ASP.NET Identity.
- Only redirect to the canonical URL for GET requests when using the RedirectToCanonicalUrlAttribute.
- Updated the Boilerplate NuGet packages to the latest versions.
- Upgraded to Newtonsoft.Json 8.0.1.
MVC 6
- Added the Microsoft.AspNet.Razor.Runtime.Precompilation NuGet package for Razor pre-compilation. Added the using 
statement to RazorPreCompilation.cs.

Version 2.9.1
MVC 6
- Removed Hammer.js.
- Fix Application Insights not registering exceptions in Startup.cs.

Version 2.9.0
MVC 6
- Upgraded NWebSec to latest version and made feature visible but experimental.
- Fixed the manifest.json link having a trailing slash in _Layout.cshtml.

Version 2.8.2
MVC 6
- Added NWebSec security through HTTP Headers to Startup.Filters and project.json. Turned off and hidden for now.
- Fixed the browserconfig.xml link having a trailing slash in _Layout.cshtml.
- Fixed the Bootstrap CSS not pointing to the correct folder for the fonts in site.scss.

Version 2.8.1
MVC 6
- webroot setting moved from project.json to hosting.json.

Version 2.8.0
MVC 5 & 6
- Added a note to ReadMe.html to turn on Azure SQL Database Threat Detection.
- Updated notes in ReadMe.html about where to get free SSL certificates.
MVC 6
- Upgraded to ASP.NET 5 RC1 Update1.
- Added Glimpse feature, enabled by default.
- NuGet packages split into three, Boilerplate.Web.Mvc6, Boilerplate.Web.Mvc6.TagHelpers, Boilerplate.Web.Mvc6.Razor.
- _ViewImports.cshtml updated to pick up the Tag Helpers from the new location.
- Boilerplate.Web.Mvc6.dll is now signed.
- NPM and Gulp packages updated in package.json.
- Logging configuration added to config.json and Startup.Logging.cs.
- Added "use strict"; in gulpfile.js.
- Added main method to Startup.cs with a setting in project.json to use it.
- Removed Bootstrap Touch Carousel from _Layout.cshtml, Index.cshtml, fallback\scripts.js, gulpfile.js, 
  ContentDeliveryNetwork.cs, bower.json. 
- Updated Readme.html with links to RC1 instead of Beta 8.