@@ -148,6 +148,10 @@
                         <a href="https://developer.mozilla.org/en-US/docs/Web/Security/CSP/Introducing_Content_Security_Policy">Content Security Policy (CSP)</a> is a great new HTTP header that controls where a web browser is allowed to load content from and the type of content it is allowed to load. It uses a white-list of allowed content and blocks anything not in the allowed list. It gives us very fine grained control and allows us to run our site in a sandbox in the users browser. Learn more about it <a href="http://rehansaeed.com/content-security-policy-for-asp-net-mvc/">here</a>, then Configure your CSP policy globally in Startup.Filters.cs or on your individual MVC controllers and actions if they have special access requirements.
                     </li>
                     <li class="list-group-item">
+                        <input name="ContentSecurityPolicy-ReportUri" type="checkbox"> <strong>Configure Report URI</strong> -
+                        Register with <a href="https://report-uri.io/">Report URI</a> to get a URL where you can send your CSP violation reports. Then add this URL to the CspReportUriAttribute in Startup.ContentSecurityPolicy.cs.
+                    </li>
+                    <li class="list-group-item">
                         <input name="ContentSecurityPolicy-CheckModernizrCSPSupport" type="checkbox"> <strong>Check Modernizr CSP Support</strong> -
                         Modernizr does not currently support
                         <a href="https://developer.mozilla.org/en-US/docs/Web/Security/CSP/Introducing_Content_Security_Policy">Content Security Policy (CSP)</a>
